new pages for task 1

--- a/u6277483/public_html/assignment.html
+++ b/u6277483/public_html/assignment.html
@@ -31,20 +31,28 @@ assignment tasks.</li>
   <li>provide link to report where indicated</li>
   <li>delete these instructions when you are ready</li>
 </ul>
+
 <p><br></p>
 <h1><b>1.0 Part 1 Tasks</b></h1>
+
 <h2><b>1.2 Your <i>Me and My Passion</i></b></h2>
-<p>Replace this line with your URL link to this element in your website.</p>
+<p><a href = "pages/Passion.html"> Me and my passion link: pages/Passion.html </a> </p>
 <p>Notes: Provide any notes you may have about this element here.</p>
+
 <h2><b>1.3 CSS</b></h2>
-<p>Replace this line with your URL link to this element in your website.</p>
+<p><a href = "style.css"> My css link link: style.css </a> </p>
 <p>Notes: Provide any notes you may have about this element here.</p>
+
+
 <h2><b>1.4 Site Map</b></h2>
-<p>Replace this line with your URL link to this element in your website.</p>
+<p><a href = "pages/Site Map.html"> My site map link: pages/Site Map.html </a> </p>
 <p>Notes: Provide any notes you may have about this element here.</p>
+
 <h2><b>1.5 Source Log</b></h2>
-<p>Replace this line with your URL link to this element in your website.</p>
+<p><a href = "pages/Source Log.html"> My source log link: pages/Source Log.html </a> </p>
 <p>Notes: Provide any notes you may have about this element here.</p>
+
+
 <h2><b>1.6 Feedback Form</b></h2>
 <p>Replace this line with your URL link to this element in your website.</p>
 <p>Notes: Provide any notes you may have about this element here.</p>
