--- a/u6277483/public_html/index.html
+++ b/u6277483/public_html/index.html
@@ -3,16 +3,10 @@
 <html>
 
 <head>
-
+<meta charset="utf-8">
 <title> Me and My Passion </title>
-<font face = "sans serif"> 
-
+<link rel="stylesheet" href="style.css">
 </head>
-  
-
-
-
-<body bgcolor = "#bc9876">
 
 
 <h1>Welcome to Zeruo's Website</h1>
@@ -20,7 +14,13 @@
 <h2>Introduction to Zeruo</h2>
  
 <p>This is Zeruo Liu's website. I am a Master of Computing student in ANU. 
-My research field is Mixed Reality</p>
+My research field is Mixed Reality including Virtual Reality and Augmented Reality.
+I am passionate about artistic design in 3D world like the scenario of 
+Minecraft in Virtual Reality World. 
+I am also enthusiastic with artistic designs, paintings and sketching in my spare time.
+I will share with you some of my drawings and paintings in this website and 
+we can also direct to some other artists' work I admire as well.
+Hope you would enjoy it.</p>
   
   
 
@@ -28,16 +28,16 @@ My research field is Mixed Reality</p>
 
 
 <p>I am passionate to different aspects of arts. 
-I am going to share some arts form in terms of music and paintings with you. </p>
+I am going to share some arts forms in terms of music and paintings with you.</p>
 
 <ul> 
   
   <ol>
-  <li><a href = "pages/Passion.html#Painting">Painting </a></li>
+  <li> <a href = "pages/Passion.html#Painting"> Painting </a> </li>
   
-  <li>Sketching</li>
+  <li> <a href = "pages/Passion.html#Sketching"> Sketching </a> </li>
   
-  <li>Music</li>
+  <li> <a href = "pages/Passion.html#Colour Pencil"> Colour Pencil </a> </li>
   
   </ul> 
   
@@ -46,8 +46,9 @@ I am going to share some arts form in terms of music and paintings with you. </p
 </ul>
 
 
+<h3> <a href = "pages/Site Map.html"> Site Map link </a> </h3>
   
-
+<h3> <a href = "pages/Source log.html"> Source Log link </a> </h3>
 
 </body>
 
