--- a/u6277483/public_html/pages/Passion.html
+++ b/u6277483/public_html/pages/Passion.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <html>
@@ -7,22 +6,60 @@
 
 <title> Introduction Myself and My Passion </title>
 <font face = "sans serif"> 
+<link rel="stylesheet" href="sub-style.css">
 
 </head>
 
 <h1>My Hobbies</h1>
 
+
+<div id="menu">
+<ul>
+<li><a href="#Painting">Paintings</a></li>
+<li><a href="#Sketching">Sketchings</a></li> 
+<li><a href="#Colour Pencil">Colour Pencil</a></li>
+</ul>
+</div>
+  
 <ul> 
   
   <ol>
   <div id = "Painting">
-  <li>Painting </li>
+  <li> <b>Painting</b> </li>
+  
+  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/p1080x1080/90349430_104654021091176_2507274115603801008_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=108&_nc_ohc=OJAnIFL-8N4AX_DpbxC&oh=38004656f9b48625caa9f82597b6f912&oe=5EAAAF25" alt="Starry nights with a boat" width="30%">
+  <br>
+  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/s1080x1080/90090483_898992527201995_6576909608203614656_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=107&_nc_ohc=3dLvY93ZHWgAX9Y8k7f&oh=106c2c59c6ae7a09aa03801819790992&oe=5EA389BA" alt="Starry nights with a boat" width="30%">
+  <br>
+  
+  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/s1080x1080/89272568_1086795741700527_8800227117713661917_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=103&_nc_ohc=3dRCtCiFzTcAX9QdRM6&oh=cad5d63e02962c2e1c4f2dc4072bf9f1&oe=5EA03F7A" alt="Starry nights with a boat" width="30%">
+  <br>
+  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/s1080x1080/89464000_882818522145628_2650366373040159161_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=104&_nc_ohc=aMaJsU-fckMAX__wRcn&oh=b40d12cf570e9905a032e3721bf6257b&oe=5EA3105D" alt="Starry nights with a boat" width="30%">
+  <br>
+  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/s1080x1080/84057958_502648907059778_6562124375887830855_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=102&_nc_ohc=4kNFtKtH8NkAX_y00Oa&oh=ddb5690268825a9de0adc6a6b2393a08&oe=5EAB6E80" alt="Starry nights with a boat" width="30%">
+  <br>
+  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/s1080x1080/84156257_2700516590178730_4431950327271291517_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=110&_nc_ohc=L0kNttZ9ghkAX8DrBbH&oh=83e90e1e5d93ae410f371e2267f37321&oe=5EA0C877" alt="Starry nights with a boat" width="30%">
+  <br>
+  <p>I am passionate with different art forms such as Chinese Paintings, watercolour paintings</p>
   
   </div>
   
-  <li>Sketching</li>
   
-  <li>Music</li>
+  <div id = "Sketching">
+  <li><b>Sketching</b></li>
+  
+  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/88276334_240559403630946_3103386988930626764_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=106&_nc_ohc=bej1ypI2dcgAX_ISdbK&oh=a37bbabdb258556064483c066560cea4&oe=5EA2ABDD" alt="Starry nights with a boat" width="30%">
+  <br>
+  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/s1080x1080/85206899_205245930853697_403862695641649579_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=105&_nc_ohc=7g7lbaJ7jhUAX-raPhO&oh=8d7cd95c8277a85f23bcffb8661ae074&oe=5EA1DEA4" alt="Starry nights with a boat" width="30%">
+  
+  <br>
+  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/p1080x1080/84304981_103431337848511_2756080711608622847_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=107&_nc_ohc=jnznIaPn2mEAX9-YYtC&oh=fc37a8c13de9fc73338b6303bbbb4cf7&oe=5EA21B25" alt="Starry nights with a boat" width="30%">
+  </div>
+  
+  
+  <div id = "Colour Pencil">
+  <li><b>Colour Pencil</b></li>
+  </div>
   
   </ul> 
   
