first assignment final

--- a/u6277483/public_html/pages/Passion.html
+++ b/u6277483/public_html/pages/Passion.html
@@ -1,70 +1,184 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
-
+<meta charset="utf-8">
 <title> Introduction Myself and My Passion </title>
-<font face = "sans serif"> 
-<link rel="stylesheet" href="sub-style.css">
-
+<link rel="stylesheet" href="style.css">
+ <!-- Use my css file to format this webpage -->
+ 
 </head>
 
+
+<div id="navigation">
 <h1>My Hobbies</h1>
 
 
+ <!-- got a navigation bar here to show the different areas of my hobbies  -->
 <div id="menu">
 <ul>
 <li><a href="#Painting">Paintings</a></li>
 <li><a href="#Sketching">Sketchings</a></li> 
-<li><a href="#Colour Pencil">Colour Pencil</a></li>
+<li><a href="#ColourPencil">Colour Pencil</a></li>
 </ul>
 </div>
-  
-<ul> 
+
+</div>
+
+ 
+ 
+<div id="content"> 
+
+ <!-- The content of the whole page for format in css -->
+
+<div id = "Introduction">
+ <!-- introduce myself -->
+<h2> Introduction</h2>
+<p>This is Zeruo Liu's passion page. 
+I am a Master of Computing student but I am passionate about creation of painting and sketching. 
+My research field is Mixed Reality including Virtual Reality and Augmented Reality. 
+I am also passionate about artistic design in 3D world like the application of 
+Minecraft in Virtual Reality World. In terms of artistic designs, 
+paintings and sketching in my spare time. 
+I will share with you some of my drawings and paintings in this page.
+ My paintings are mainly shown in image formats in this website. 
+ Hope you would enjoy it.
+</p>
+</div>
+
+
+<p>I am passionate with different art forms such as Chinese Paintings, watercolour paintings. 
+This webpage shows a collection of my own paintings.</p>
+
+<h2> Drawing types</h2>
+
+  <!-- a list of 3 drawing types -->
+  <!--  link to my instagram sources of different pictures-->
+   <!-- There is a clear div between each imaages to be clear -->
   
   <ol>
-  <div id = "Painting">
-  <li> <b>Painting</b> </li>
   
-  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/p1080x1080/90349430_104654021091176_2507274115603801008_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=108&_nc_ohc=OJAnIFL-8N4AX_DpbxC&oh=38004656f9b48625caa9f82597b6f912&oe=5EAAAF25" alt="Starry nights with a boat" width="30%">
-  <br>
-  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/s1080x1080/90090483_898992527201995_6576909608203614656_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=107&_nc_ohc=3dLvY93ZHWgAX9Y8k7f&oh=106c2c59c6ae7a09aa03801819790992&oe=5EA389BA" alt="Starry nights with a boat" width="30%">
-  <br>
+   <!-- painting element-->
+  <li> 
   
-  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/s1080x1080/89272568_1086795741700527_8800227117713661917_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=103&_nc_ohc=3dRCtCiFzTcAX9QdRM6&oh=cad5d63e02962c2e1c4f2dc4072bf9f1&oe=5EA03F7A" alt="Starry nights with a boat" width="30%">
-  <br>
-  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/s1080x1080/89464000_882818522145628_2650366373040159161_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=104&_nc_ohc=aMaJsU-fckMAX__wRcn&oh=b40d12cf570e9905a032e3721bf6257b&oe=5EA3105D" alt="Starry nights with a boat" width="30%">
-  <br>
-  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/s1080x1080/84057958_502648907059778_6562124375887830855_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=102&_nc_ohc=4kNFtKtH8NkAX_y00Oa&oh=ddb5690268825a9de0adc6a6b2393a08&oe=5EAB6E80" alt="Starry nights with a boat" width="30%">
-  <br>
-  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/s1080x1080/84156257_2700516590178730_4431950327271291517_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=110&_nc_ohc=L0kNttZ9ghkAX8DrBbH&oh=83e90e1e5d93ae410f371e2267f37321&oe=5EA0C877" alt="Starry nights with a boat" width="30%">
-  <br>
-  <p>I am passionate with different art forms such as Chinese Paintings, watercolour paintings</p>
+  <div id = "Painting"><b>Painting</b> 
+  <p>I drew Chinese painting years ago. Now I normally paint some watercolour in spare time this year. 
+  Thus, I am just a beginner of watercolour painting. Here are a 
+  collection of my watercolour paintings. I am still on my way in practicing mixing colours and watercolour is 
+  really a kind of magic in free play of water.</p>
+  
+  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/p1080x1080/90349430_104654021091176_2507274115603801008_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=108&_nc_ohc=OJAnIFL-8N4AX_DpbxC&oh=38004656f9b48625caa9f82597b6f912&oe=5EAAAF25" alt="Starry nights with a boat" width="300">
+  
+  <div class="clear">
+  </div>
+  
+
+ 
+  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/s1080x1080/90090483_898992527201995_6576909608203614656_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=107&_nc_ohc=3dLvY93ZHWgAX9Y8k7f&oh=106c2c59c6ae7a09aa03801819790992&oe=5EA389BA" alt="Starry nights with a boat" width="300">
+ 
+  <div class="clear">
+  </div>
+   
+  
+  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/s1080x1080/84057958_502648907059778_6562124375887830855_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=102&_nc_ohc=4kNFtKtH8NkAX_y00Oa&oh=ddb5690268825a9de0adc6a6b2393a08&oe=5EAB6E80" alt="Starry nights with a boat" width="300">
+  
+  <div class="clear">
+  </div>
+  
+
+  <div id = "rose">
+  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/s1080x1080/84156257_2700516590178730_4431950327271291517_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=110&_nc_ohc=L0kNttZ9ghkAX8DrBbH&oh=83e90e1e5d93ae410f371e2267f37321&oe=5EA0C877" alt="Starry nights with a boat" width="300">
+
+  </div>
+  <div class="clear">
+  </div>
   
   </div>
   
+  <br>
+  </li>
+  
+
+  
+
+  
+  
+   <!-- sketching element -->
+  <li>
   
   <div id = "Sketching">
-  <li><b>Sketching</b></li>
+  <b>Sketching</b>
   
-  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/88276334_240559403630946_3103386988930626764_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=106&_nc_ohc=bej1ypI2dcgAX_ISdbK&oh=a37bbabdb258556064483c066560cea4&oe=5EA2ABDD" alt="Starry nights with a boat" width="30%">
-  <br>
-  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/s1080x1080/85206899_205245930853697_403862695641649579_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=105&_nc_ohc=7g7lbaJ7jhUAX-raPhO&oh=8d7cd95c8277a85f23bcffb8661ae074&oe=5EA1DEA4" alt="Starry nights with a boat" width="30%">
+  <p>Simple pencil sketching help me to understand the 3D structure of objects and how we visualise objects 
+  in 2D plane. I will practice some portait sketching from time to time to practice my skills to master
+  objects structure and cognition. </p>
   
-  <br>
-  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/p1080x1080/84304981_103431337848511_2756080711608622847_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=107&_nc_ohc=jnznIaPn2mEAX9-YYtC&oh=fc37a8c13de9fc73338b6303bbbb4cf7&oe=5EA21B25" alt="Starry nights with a boat" width="30%">
+  <!-- a list of sketching with clear div between-->
+  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/88276334_240559403630946_3103386988930626764_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=106&_nc_ohc=bej1ypI2dcgAX_ISdbK&oh=a37bbabdb258556064483c066560cea4&oe=5EA2ABDD" alt="Starry nights with a boat" width="300">
+  
+  
+  <div class="clear">
+  </div>
+
+  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/s1080x1080/85206899_205245930853697_403862695641649579_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=105&_nc_ohc=7g7lbaJ7jhUAX-raPhO&oh=8d7cd95c8277a85f23bcffb8661ae074&oe=5EA1DEA4" alt="Starry nights with a boat" width="300">
+  
+  <div class="clear">
+  </div>
+
+  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/p1080x1080/84304981_103431337848511_2756080711608622847_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=107&_nc_ohc=jnznIaPn2mEAX9-YYtC&oh=fc37a8c13de9fc73338b6303bbbb4cf7&oe=5EA21B25" alt="Starry nights with a boat" width="300">
+  <div class="clear">
   </div>
   
-  
-  <div id = "Colour Pencil">
-  <li><b>Colour Pencil</b></li>
   </div>
   
-  </ul> 
+  <br>
+  
+  </li>
+  
+
+  
+  
+   <!-- color pencil element -->
+  <li><div id = "ColourPencil">
+  
+  <b>Colour Pencil</b>
+  
+  
+  <p>I learn colour pencil sketching by myself. It takes a lot of time to finish one colour pencil drawing, but
+  I still think it is the easiest way to express colours in an artistic way. It is similar to normal sketching 
+  except we have colours to represent what we observe. </p>
+   <!--  a list of colour pencil drawings with clear between-->
+   
+   
+  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/p1080x1080/75448854_507697606623660_7474417168892807485_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=100&_nc_ohc=3-tXUV9P7vgAX8siLKs&oh=e646f40b111d46999134386e1cd8a6f1&oe=5EB18E74" alt="Starry nights with a boat" width="300">
+  
+  <div class="clear">
+	</div>
+  
+  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/s1080x1080/77330659_241791783467569_6504015413575812772_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=101&_nc_ohc=7CtQEoJ2mkAAX_IfFiw&oh=8d0fbd17021841766a944781283cca66&oe=5EB08809" alt="Starry nights with a boat" width="300">
+  
+  <div class="clear">
+	</div>
+
+  <img src="https://instagram.fcbr1-1.fna.fbcdn.net/v/t51.2885-15/e35/82235076_2485633575043704_295818534210239294_n.jpg?_nc_ht=instagram.fcbr1-1.fna.fbcdn.net&_nc_cat=100&_nc_ohc=hZNEoWqfS-MAX_rRdEu&oh=9d1013798a503f168890b2bcec099153&oe=5EB16BB8" alt="Starry nights with a boat" width="300">
+  
+  <div class="clear">
+	</div>
+	
+	</div>
+  </li>
+  
+  
   
   </ol>
   
-</ul>
+
+
+</div>
+
+ <!-- can back to index page-->
+<hr>
+<p><a href="../index.html">Back to Index</a></p>
 
 </html>
