--- a/u6277483/public_html/assignment.html
+++ b/u6277483/public_html/assignment.html
@@ -37,33 +37,38 @@ assignment tasks.</li>
 
 <h2><b>1.2 Your <i>Me and My Passion</i></b></h2>
 <p><a href = "pages/Passion.html"> Me and my passion link: pages/Passion.html </a> </p>
-<p>Notes: Provide any notes you may have about this element here.</p>
+<p>Notes: There are contents in passin file and index file for this task.</p>
 
 <h2><b>1.3 CSS</b></h2>
-<p><a href = "style.css"> My css link link: style.css </a> </p>
-<p>Notes: Provide any notes you may have about this element here.</p>
+<p><a href = "pages/style.css"> My css link link: style.css </a> </p>
+<p>Notes: this css file is used for all the website pages except the assignment.html.</p>
 
 
 <h2><b>1.4 Site Map</b></h2>
-<p><a href = "pages/Site Map.html"> My site map link: pages/Site Map.html </a> </p>
-<p>Notes: Provide any notes you may have about this element here.</p>
+<p><a href = "pages/SiteMap.html"> My site map link: pages/Site Map.html </a> </p>
+<p>Notes: It shows all the links of my website.</p>
 
 <h2><b>1.5 Source Log</b></h2>
-<p><a href = "pages/Source Log.html"> My source log link: pages/Source Log.html </a> </p>
-<p>Notes: Provide any notes you may have about this element here.</p>
+<p><a href = "pages/SourceLog.html"> My source log link: pages/Source Log.html </a> </p>
+<p>Notes: It shows all the sources in this webpage in a table format.</p>
 
 
 <h2><b>1.6 Feedback Form</b></h2>
-<p>Replace this line with your URL link to this element in your website.</p>
-<p>Notes: Provide any notes you may have about this element here.</p>
+<p><a href = "pages/Feedback.html"> My Feedback link: pages/Feedback.html </a> </p>
+<p>Notes: Users can provide feedback to me in this page with form format.</p>
+
 <h2><b>1.7 This Assessment Page</b></h2>
-<p>Replace this line with your URL link to this element in your website.</p>
-<p>Notes: Provide any notes you may have about this element here.</p>
+<p><a href = "assignment.html"> Me assignment link: assignment.html </a> </p>
+<p>Notes: lead to the assignment page in the base file.</p>
+
 <h2><b>1.8 Student Forum Participation</b></h2>
-<p>Replace this line with your UR link to 1st of 3 nominated 'best posts.'</p>
-<p>Replace this line with your UR link to 2nd of 3 nominated 'best posts.'</p>
-<p>Replace this line with your UR link to 3rd of 3 nominated 'best posts.'</p>
+<p><a href = https://piazza.com/class/k6epg7t7476621?cid=35> Forum Post 1 </a> </p> 
+<p>  <a href = https://piazza.com/class/k6epg7t7476621?cid=110> Forum Post 2 </a> </p>
+<p><a href = https://piazza.com/class/k6epg7t7476621?cid=111> Forum Post 3 </a></p>
 <p><br></p>
+
+
+
 <p><br></p>
 <h1><b>2.0 Part 2 Tasks</b></h1>
 <h2><b>2.1 Image Map</b></h2>
