--- a/u6277483/public_html/index.html
+++ b/u6277483/public_html/index.html
@@ -1,54 +1,87 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
 <meta charset="utf-8">
 <title> Me and My Passion </title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="pages/style.css">
+ <!-- use css file in the pages dir to format this webpage -->
 </head>
 
 
 <h1>Welcome to Zeruo's Website</h1>
 
-<h2>Introduction to Zeruo</h2>
+
+<div id = "IndexIntro">
+
+<h2><a href= "pages/Passion.html#Introduction">Introduction to Zeruo</a></h2>
+  <!--  Link to the intro in the passion page-->
+  
+  
+  <img src="images/Me.jpeg" alt="Starry nights with a boat" width="500">
  
 <p>This is Zeruo Liu's website. I am a Master of Computing student in ANU. 
 My research field is Mixed Reality including Virtual Reality and Augmented Reality.
-I am passionate about artistic design in 3D world like the scenario of 
+I am passionate about artistic design in 3D world like the application of 
 Minecraft in Virtual Reality World. 
 I am also enthusiastic with artistic designs, paintings and sketching in my spare time.
-I will share with you some of my drawings and paintings in this website and 
-we can also direct to some other artists' work I admire as well.
-Hope you would enjoy it.</p>
+I will share with you some of my drawings and paintings in this website. 
+My paintings 
+are mainly shown in image formats in the passion page.
+Please come to the detailed "My passion page".</p>
+
+
+  <div class="clear">
+  </div>
   
-  
+</div> 
+
+
+<div id = "IndexPassion">
 
 <h2> <a href = "pages/Passion.html"> My Hobbies </a> </h2>
 
-
+ <!--  Link to the detailed passion page with images and detailed introduction-->
 <p>I am passionate to different aspects of arts. 
-I am going to share some arts forms in terms of music and paintings with you.</p>
+I am going to share some arts forms in terms of Watercolour paintings and pencil sketchings with you.
+These are the most familiar skills to me currently.</p>
 
-<ul> 
-  
+
+ <!-- briefly list the my hobbies -->
+
   <ol>
-  <li> <a href = "pages/Passion.html#Painting"> Painting </a> </li>
+  <li> <a href = "pages/Passion.html#Painting"> Painting </a> 
+  <p>I drew Chinese painting years ago. Now I normally paint some watercolour in spare time this year. Here are a 
+  collection of my watercolour paintings. I am still on my way in practicing mixing colours.</p>
+  </li>
   
-  <li> <a href = "pages/Passion.html#Sketching"> Sketching </a> </li>
+  <li> <a href = "pages/Passion.html#Sketching"> Sketching </a> 
   
-  <li> <a href = "pages/Passion.html#Colour Pencil"> Colour Pencil </a> </li>
+  <p>Simple pencil sketching help me to understand the 3D structure of objects and how we visualise objects 
+  in 2D plane. </p>
+  </li>
   
-  </ul> 
+  <li> <a href = "pages/Passion.html#ColourPencil"> Colour Pencil </a> 
+  <p>I learn colour pencil sketching by myself. It takes a lot of time to finish one colour pencil drawing, but
+  I still think it is the easiest way to draw colours on the paper. </p>
+  </li>
+
   
   </ol>
   
-</ul>
 
+</div>
 
-<h3> <a href = "pages/Site Map.html"> Site Map link </a> </h3>
+ <!-- I set some links to the other website pages   -->
+<h3> <a href = "pages/SiteMap.html"> Site Map link </a> </h3>
+<p>This website contains a collection of all links.</p>
   
-<h3> <a href = "pages/Source log.html"> Source Log link </a> </h3>
+<h3> <a href = "pages/SourceLog.html"> Source Log link </a> </h3>
+<p>Source Log contains a table to list all of the sources used in this website.</p>
+
+<h3> <a href = "pages/Feedback.html"> Feedback </a> </h3>
+<p>You can give me feedbacks in terms of my works or website in this feedback page.</p>
 
 </body>
 
